package com.vanskarner.domain;

public abstract class DomainError extends RuntimeException {
}