@startuml
!include ../../../../../../../../StylesForDiagrams.puml

/'Specification'/
package usecases as "com.vanskarner.usecases"{
    class MovieDetailDS<<(D,orange)Data Structure>>
    class MovieDS<<(D,orange)Data Structure>>
    class MoviesDS<<(D,orange)Data Structure>>
    class MoviesFilterDS<<(D,orange)Data Structure>>
    interface MovieServices<<interface>>
    class MovieDefaultServices
    class FilterUpcomingMoviesUseCase
    class ToggleMovieFavoriteUseCase
    class CheckFavoriteMovieUseCase
    class DeleteAllFavoriteMoviesUseCase
    class FindFavoriteMovieUseCase
    class ShowFavoriteMoviesUseCase
    class ShowUpcomingMoviesUseCase
    class FindUpcomingMovieUseCase
    together {
        interface MovieLocalRepository<<interface>>
        interface MovieRemoteRepository<<interface>>
    }
    class MovieMapper
    together {
        class DomainErrorFilter
        abstract DomainError<<abstract>>
        class MovieFavoriteLimit
    }
}

/'Relations'/
MovieServices ..> MoviesDS
MovieServices ..> MovieDetailDS
MovieServices ..> MoviesFilterDS
MoviesDS --> "0..*" MovieDS

MovieDefaultServices .left.|> MovieServices
MovieDefaultServices --> ShowUpcomingMoviesUseCase
MovieDefaultServices --> FindUpcomingMovieUseCase
MovieDefaultServices --> ShowFavoriteMoviesUseCase
MovieDefaultServices --> FindFavoriteMovieUseCase
MovieDefaultServices --> CheckFavoriteMovieUseCase
MovieDefaultServices --> ToggleMovieFavoriteUseCase
MovieDefaultServices --> DeleteAllFavoriteMoviesUseCase
MovieDefaultServices --> FilterUpcomingMoviesUseCase

CheckFavoriteMovieUseCase --> MovieLocalRepository
ToggleMovieFavoriteUseCase --> MovieLocalRepository
DeleteAllFavoriteMoviesUseCase --> MovieLocalRepository
FindFavoriteMovieUseCase --> MovieLocalRepository
ShowFavoriteMoviesUseCase --> MovieLocalRepository
ShowUpcomingMoviesUseCase --> MovieRemoteRepository
FindUpcomingMovieUseCase --> MovieRemoteRepository

ShowUpcomingMoviesUseCase ..> MovieMapper
FindUpcomingMovieUseCase ..> MovieMapper
ShowFavoriteMoviesUseCase ..> MovieMapper
FindFavoriteMovieUseCase ..> MovieMapper

MovieMapper ..> MovieDetailDS
MovieMapper ..> MoviesDS

ToggleMovieFavoriteUseCase --> DomainErrorFilter
DomainErrorFilter --> "1..*" DomainError
DomainError <|- MovieFavoriteLimit

/'Visualization'/
hide members
skinparam LineType ortho
@enduml